Fix overflow on small screens

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,6 +3,10 @@
 
 @import "minima";
 
+.page-content {
+  overflow-x: auto;
+}
+
 .main-list {
   list-style-type: none;
   margin-left: 0;
